<resources>
    <string name="app_name">Idea Projects</string>
    <string name="title_activity_navigation_menu">Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="id_proj">Idea Projects</string>

    <string name="lego">LEGO</string>
    <string name="arduino">Arduino</string>
    <string name="android">Android</string>
    <string name="mail">Enter E-mail</string>
    <string name="password">Enter password</string>
    <string name="first_time">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="name">Enter your name</string>
    <string name="signin">Already registered?</string>
    <string name="sign__in">Sign in...</string>
</resources>
